# fluid_controller

./: README.m  README.md  flow_volume.json
controller_hardware/: #auto_saved_files#  (+6 more)
controller_interface/: .gitignore  README.md  build.bat  pyproject.toml  requirements.txt
controller_interface/controller_interface/: __init__.py  main.py  pyproject.toml
controller_interface/controller_interface/controller/: ui_controller.py
controller_interface/controller_interface/model/: analysis.py  flow_volume_tracker.py  run_manager.py  serial_worker.py
controller_interface/controller_interface/resources/: resources.qrc  resources_rc.py
controller_interface/controller_interface/src/controller_interface/: main.py
controller_interface/controller_interface/src/controller_interface/core/: flow_volume_tracker.py  run_manager.py
controller_interface/controller_interface/utils/: logging_utils.py  path_utils.py
controller_interface/controller_interface/view/panels/: control.py  live_data.py
controller_interface/controller_interface/view/plots/: color_presets.py  plot_factory.py  plot_manager.py  time_axis_item.py
controller_interface/controller_interface/view/themes/: common.qss
controller_interface/controller_interface/view/views/: home.py  main_window.py  ui.py
controller_interface/pid_controller/_controller/: _controller.ino  bartels.cpp  constant_voltage_control.h  display.h  gain.h  pid.h  sigmoidal_control.cpp  sigmoidal_control.h  system_state.h
controller_interface/src/: flow_volume.json
controller_interface/src/controller_interface/: flow_volume.json
controller_interface/src/controller_interface/core/: analysis.py  flow_volume_tracker.py  run_manager.py  serial_worker.py
controller_interface/src/controller_interface/gui/panels/: live_data_panel.py  tuning_control_panel.py
controller_interface/test/: ...txt
controller_interface/test_hardware/test_i2c/: test_i2c.ino
controller_interface/test_hardware/test_sensor/: test_sensor.ino
(+167 files in other folders)
