[build-system]
# Requires setuptools 61.0+ for full PEP 621 support
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "controller_interface"
version = "1.0.0"
description = "A short description of controller_interface"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

# Author info
authors = [
  { name = "Rode Peters", email = "rpeters@salvusdetect.com" }
]

# Dependencies (from pipreqs + any others you need)
dependencies = [
  "PyQt5>=5.15.11",
  "matplotlib>=3.10.0",
  "pandas>=2.2.3"
]

# Console script to run your app with "run" on the command line
[project.scripts]
run = "controller_interface.main:main"

[tool.setuptools]
# Tells setuptools to include non-Python files from package_data or MANIFEST.in
include-package-data = true

[tool.setuptools.package-data]
# For example, include all .qss files in controller_interface/gui/themes
"controller_interface.gui.themes" = ["*.qss"]
# Combine .png, .ico, and .json in a single line for the 'resources' folder
"controller_interface.resources" = ["*.png", "*.ico", "*.json"]
